feat: add get single Airbnb sample data endpoint
