# src/database/model/airbnbDataModel.ts
@@ -49,7 +49,7 @@ export interface AirbnbDataModel extends Document {
     host_name: string;
     host_location: string;
     host_about: string;
-    host_response_time?: string;
+    host_response_time: string;
     host_thumbnail_url: string;
     host_picture_url: string;
     host_neighbourhood: string;
